# minishell

./: .gitignore  CMakeLists.txt  Makefile
include/: builtin.h  env_tools.h  error_tools.h  fd_tools.h  handlers.h  lexer.h  msh.h  other_tools.h  parser.h  process.h  prompt_tools.h  test_tools.h
libft/: Makefile
libft/ft_stdio/: ft_get_next_line.c  ft_putnstr_fd.c
libft/ft_stdlib/: ft_calloc.c
libft/ft_string/: ft_split.c
libft/include/: ft_ctype.h  ft_stdio.h  ft_stdlib.h  ft_string.h
src/: env_tools.c  fd_tools.c  fd_tools.h  get_full_name.c  handlers.c  handlers.h  lexer.c  lexer_2.c  lexer_utils.c  lexer_utils_2.c  main.c  parser.c  parser_utils_2.c  process.c  prompt_tools.c  prompt_tools.h  tags
src/builtin/: builtin.c  cd_main.c  echo_main.c  env_main.c  exit_main.c  export_main.c  pwd_main.c  unset_main.c
src/lexer/: lexer.c  lexer_2.c  lexer_utils.c  lexer_utils_2.c
src/parser/: parser.c  parser_2.c  parser_3.c  parser_utils.c  parser_utils_2.c
src/utils/: echo_main.c  env_main.c  env_tools.c  env_tools_2.c  error_tools.c  exit_failure.c  fd_tools.c  ft_strar.c  ft_strar.h  get_full_name.c  handlers.c  msg_exit.c  msg_exit.h  prompt_tools.c  pwd_main.c  strarr_tools.c  test_tools.c
